--- a/jquery/01-selecteurs/selecteurs.html
+++ b/jquery/01-selecteurs/selecteurs.html
@@ -87,7 +87,7 @@
             });
         
 
-        // selectionner les duex div, leur donner un contour rouge
+        // selectionner les deux div, leur donner un contour rouge
         $('div').css( "border", "red solid 1px");
 
         // selectionner les elements qui ont la class select pour leur appliquer une couleur de font bleu et un texte white
@@ -161,7 +161,8 @@
         $('figcaption').html(monAlt);
 
         // le tout  peut aussi se résoudre en une seule ligne: 
-        // $('figcaption').html($('img').attr('alt'))
+        // $('figcaption').html($('img').attr('alt'));
+        
 
 
 
